...

    <string name="no_initial_destination">Bought address not found</string>

    <string name="no_directions">No directions / routes can be found</string>

    <!-- Drawer Layout Nav -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Agree Culture</string>
    <string name="nav_header_subtitle">agree.culture@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_my_cart">My Cart</string>
    <string name="nav_edit_account">Edit Account</string>
    <string name="nav_logout">Logout</string>

    <string name="nav_orders">Orders</string>
...
    <string name="user_exists">Currently there is a user sign in</string>


    <!-- Main Menu -->
    <!-- Home Strings -->
    <string name="search_product_empty">Please input product to search</string>
    <string name="home_login">Login</string>
    <string name="home_logo_cont_description">Home Logo</string>
    <string name="home_search_hint">Search : Rice, Beans, and ETC.</string>
    <string name="home_button_dist">Distributor</string>
    <string name="home_button_sell">Supplier</string>
    <string name="home_button_cont_dist">Distributor</string>
    <string name="home_button_cont_sell">Supplier</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Main Menu -->
    <!-- Messages -->
    <string name="menu_messages_desc">
        <font size="18">
            <b>
...
    <string name="title_activity_menu_products">MenuProducts</string>

    <string name="title_activity_products_creation">ProductsCreationActivity</string>
    <string name="title_activity_products_update">ProductsUpdateActivity</string>

    <!-- Create Product -->
    <string name="product_create_btn">Create</string>
    <string name="product_create_basic">Basic Information</string>
    <string name="product_create_name_label">Product Name</string>
    <string name="product_create_name">Product Name</string>
    <string name="product_create_transaction_details">Transaction Details</string>
    <string name="product_create_price_label">Price per kg.</string>
    <string name="product_create_price">0.00</string>
    <string name="product_create_quantity_label">Quantity</string>
    <string name="product_create_quantity">0</string>
    <string name="product_create_minimum_label">Minimum Quantity</string>
    <string name="product_create_minimun">0</string>

    <!-- Create Product Error -->
    <string name="product_create_name_error">Product name is required</string>
    <string name="product_create_number_error">%1$s must not be lesser than or equal to zero</string>
...
