<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/product_create_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/nav_header_desc"
        android:background="@drawable/imageview_rectangular"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="35dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_add_photo_alternate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/product_create_basic"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="-5dp"
        android:text="@string/product_create_name_label"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:padding="5dp"
            android:id="@+id/product_create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittext_white_background"
            android:hint="@string/product_create_name" />

    </android.support.design.widget.TextInputLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="#98999b" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/product_create_transaction_details"
        android:textColor="#000000"
        android:textSize="18sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/product_create_price_label"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="#229910"
        android:orientation="horizontal">

        <LinearLayout
            android:paddingTop="1dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="PHP"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputEditText
                android:padding="2dp"
                android:inputType="numberDecimal"
                android:id="@+id/product_create_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="70dp"
                android:background="@drawable/edittext_white_background"
                android:hint="@string/product_create_price"
                android:paddingStart="5dp"
                android:paddingEnd="10dp" />


        </LinearLayout>


    </android.support.design.widget.TextInputLayout>


    <TextView
        android:text="@string/product_create_quantity_label"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="-5dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:inputType="number"
            android:padding="5dp"
            android:hint="@string/product_create_quantity"
            android:background="@drawable/edittext_white_background"
            android:id="@+id/product_create_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="-5dp"
        android:text="@string/product_create_minimum_label"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:inputType="number"
            android:id="@+id/product_create_minimum"
            android:padding="5dp"
            android:hint="@string/product_create_minimun"
            android:background="@drawable/edittext_white_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="-5dp"
        android:text="@string/weight"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:inputType="number"
            android:id="@+id/product_create_kg"
            android:padding="5dp"
            android:hint="@string/zero"
            android:background="@drawable/edittext_white_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>